<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="60dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <TextView
            android:id="@+id/txtheadername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:hint="@string/app_name"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/txtFirstName"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            android:hint="@string/txtFirstName"
            android:inputType="text|textPersonName" />

        <EditText
            android:id="@+id/txtLastName"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            android:hint="@string/txtLastName"
            android:inputType="text|textPersonName" />

        <EditText
            android:id="@+id/txtPhoneNumber"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            android:hint="@string/txtPhoneNumber"
            android:inputType="text|textPersonName" />

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            android:hint="@string/txtEmail"
            android:inputType="text|textPersonName" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp"
            android:onClick="saveToContacts"
            android:visibility="visible"
            android:hint="@string/btnSave"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/btnSave">
            <Button
                android:id="@+id/btnModify"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="30dp"
                android:onClick="btnModifyContact"
                android:layout_alignParentStart="true"
                android:visibility="invisible"
                android:text="@string/modify" />

            <Button
                android:id="@+id/btnDelete"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="30dp"
                android:layout_alignParentEnd="true"
                android:layout_alignRight="@+id/btnModify"
                android:onClick="btnDeleteContact"
                android:text="@string/delete"
                android:visibility="invisible" />

        </RelativeLayout>

    </LinearLayout>
</ScrollView>